# FIRE

./: .buildinfo  .codecov.yml  .gitignore  .travis.yml  HOWTORELEASE.md  LICENSE  README.md  cli.py  datamodel.html  docker-compose.sh  docker-compose.yml  environment-dev-geod-lev.yml  environment-dev.yml  environment.yml  fire-gama.ini  for_udviklere.html  genindex.html  index.html  installation.html  konfiguration.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.circleci/: config.yml  fire.ini  fire_settings.json
.doctrees/: datamodel.doctree  environment.pickle  for_udviklere.doctree  index.doctree  installation.doctree  konfiguration.doctree
_images/: graphviz-0cbe428d4df279bdff9c90d0907447c4f69e32d6.png.map  graphviz-2fd499168320e9ec94925ba5ae68116eb3bae6a4.png.map  graphviz-3a59477f2430df55821b2bc81be310e2032044ab.png.map  graphviz-81842fd860f007cff99f60c508122b7e0c9e5359.png.map  graphviz-bde566dce0bde24a33f17f272366e96451c2c195.png.map  graphviz-d66f94ee0972ec7936dae6b26122fe04e10a48b4.png.map
_sources/: datamodel.rst.txt  for_udviklere.rst.txt  installation.rst.txt
_static/: documentation_options.js
adapter/: __init__.py  gamanetworkdoc.py  gamareader.py  gamawriter.py
api/: fire.api.firedb.html  fire.api.gama.html  fire.api.html  fire.api.model.html  fire.api.niv.html  fire.cli.grafik.html  fire.cli.html  fire.cli.indlæs.html  fire.cli.niv.html  fire.cli.søg.html  fire.cli.ts.html  fire.html  fire.io.html  fire.io.regneark.html  modules.html
apps/: config.html  gama.html  grafik.html  index.html  indlæs.html  info.html  luk.html  niv.html  opret.html  ts.html
data/: herredsogn.dbf  herredsogn.shp  herredsogn.shx  readme.md  (+4 more)
(+516 files in other folders)
